--- a/cmfz/pom.xml
+++ b/cmfz/pom.xml
@@ -81,6 +81,24 @@
             <artifactId>mybatis</artifactId>
             <version>3.2.8</version>
         </dependency>
+        <!--热部署-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>springloaded</artifactId>
+            <version>1.2.7.RELEASE</version>
+        </dependency>
+        <!--验证码-->
+        <dependency>
+            <groupId>com.google</groupId>
+            <artifactId>kaptcha</artifactId>
+            <version>2.3.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google</groupId>
+            <artifactId>kaptcha_jdk14</artifactId>
+            <version>2.3.2</version>
+        </dependency>
 
     </dependencies>
 
