--- a/cmfz/src/main/resources/application.yaml
+++ b/cmfz/src/main/resources/application.yaml
@@ -6,7 +6,7 @@ server:
   port: 8081
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf-8
+    url: jdbc:mysql://localhost:3306/test
     type: com.alibaba.druid.pool.DruidDataSource
     data-username: root
     data-password: root
